Fix multiproject issues with cpp